tester/tests/compile-fail/garbage.srv


this
is
garbage
and
should
not
compile
